# DeepseeK-Path

./: .gitignore  README.md  alterseek_path.py  compute_centroid_hybrid.py  find_sf_operations.py  lattice_kpoints.py  plot_alterband.py  pyproject.toml
example/: INCAR  KLABELS  KPOINTS  POSCAR  POTCAR
tools/: organize_tested_cases.py
